--- a/simplic-dataport/Simplic.DataPort.DB.Processing.Service/Simplic.DataPort.DB.Processing.Service.csproj
+++ b/simplic-dataport/Simplic.DataPort.DB.Processing.Service/Simplic.DataPort.DB.Processing.Service.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Simplic.DataPort.DB.Processing.Service</RootNamespace>
     <AssemblyName>Simplic.DataPort.DB.Processing.Service</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -32,14 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MongoDB.Bson, Version=2.7.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Bson.2.7.3\lib\net45\MongoDB.Bson.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Simplic.Cloud.DataPort, Version=1.1.219.313, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.Cloud.DataPort.1.1.219.313\lib\netstandard2.0\Simplic.Cloud.DataPort.dll</HintPath>
+    <Reference Include="Simplic.DataPort.DB.Processing">
+      <HintPath>..\Simplic.DataPort.DB.Processing\bin\Debug\Simplic.DataPort.DB.Processing.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,11 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DBProcessingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="package.bat" />
+    <None Include="Simplic.DataPort.DB.Processing.Service.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
