--- a/simplic-dataport/Simplic.DataPort.DB.Processing/Simplic.DataPort.DB.Processing.csproj
+++ b/simplic-dataport/Simplic.DataPort.DB.Processing/Simplic.DataPort.DB.Processing.csproj
@@ -46,10 +46,14 @@
   <ItemGroup>
     <Compile Include="Interface\IDBProcessingRepository.cs" />
     <Compile Include="Interface\IDBProcessingService.cs" />
+    <Compile Include="Model\TableColumnModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\TableSchemaModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="packages.config" />
+    <None Include="Simplic.DataPort.DB.Processing.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
