--- a/simplic-dataport/Simplic.DataPort.DB.Processing.Data/Simplic.DataPort.DB.Processing.Data.csproj
+++ b/simplic-dataport/Simplic.DataPort.DB.Processing.Data/Simplic.DataPort.DB.Processing.Data.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="DBProcessingSqlRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlStatement.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Simplic.DataPort.DB.Processing\Simplic.DataPort.DB.Processing.csproj">
