--- a/simplic-dataport/Simplic.DataPort.DB.Processing/Simplic.DataPort.DB.Processing.csproj
+++ b/simplic-dataport/Simplic.DataPort.DB.Processing/Simplic.DataPort.DB.Processing.csproj
@@ -44,9 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\DBProcessingException.cs" />
     <Compile Include="Interface\IDBProcessingRepository.cs" />
     <Compile Include="Interface\IDBProcessingService.cs" />
+    <Compile Include="Model\DBRecordTableColumnModel.cs" />
+    <Compile Include="Model\DBTableModel.cs" />
     <Compile Include="Model\ErrorLogModel.cs" />
+    <Compile Include="Model\FileTypeDBModel.cs" />
     <Compile Include="Model\TableColumnModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\TableSchemaModel.cs" />
