--- a/simplic-session/Simplic.Session.Service/Simplic.Session.Service.csproj
+++ b/simplic-session/Simplic.Session.Service/Simplic.Session.Service.csproj
@@ -54,8 +54,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Simplic.Tenant">
-      <Version>1.1.19.1011</Version>
+    <PackageReference Include="Simplic.TenantSystem">
+      <Version>1.2.19.127</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
