--- a/simplic-template-parser/azure-pipelines.yml
+++ b/simplic-template-parser/azure-pipelines.yml
@@ -48,7 +48,7 @@ steps:
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
   inputs:
     command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/Simplic.TemplateParser.*.nupkg;!$(Build.ArtifactStagingDirectory)/Simplic.TemplateParser.*.symbols.nupkg'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/TemplateParser.*.nupkg;!$(Build.ArtifactStagingDirectory)/TemplateParser.*.symbols.nupkg'
     nuGetFeedType: 'internal'
     publishVstsFeed: 'f7087ef5-bf6f-48b2-8b8b-5e513f4a7a9e'
     allowPackageConflicts: true
