--- a/simplic-corelib/Test/Simplic.CoreLib.StatefulCollection/Simplic.CoreLib.StatefulCollection.csproj
+++ b/simplic-corelib/Test/Simplic.CoreLib.StatefulCollection/Simplic.CoreLib.StatefulCollection.csproj
@@ -57,7 +57,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Simplic.CoreLib\Simplic.CoreLib.csproj">
+    <ProjectReference Include="..\..\Simplic.CoreLib\Simplic.CoreLib.csproj">
       <Project>{94401A6D-06D1-4822-9E0F-F71BC92E94C4}</Project>
       <Name>Simplic.CoreLib</Name>
     </ProjectReference>
