--- a/simplic-authentication/Simplic.CredentialProvider.ActiveDirectory/Simplic.CredentialProvider.ActiveDirectory.csproj
+++ b/simplic-authentication/Simplic.CredentialProvider.ActiveDirectory/Simplic.CredentialProvider.ActiveDirectory.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Simplic.CredentialProvider.ActiveDirectory</RootNamespace>
     <AssemblyName>Simplic.CredentialProvider.ActiveDirectory</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -55,10 +56,6 @@
       <Project>{EA6BBAEA-01C6-4387-85E5-B17F741F9D53}</Project>
       <Name>Simplic.Authentication</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="package.bat" />
-    <None Include="Simplic.CredentialProvider.ActiveDirectory.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
