--- a/simplic-authorization/Simplic.Authorization.Service/packages.config
+++ b/simplic-authorization/Simplic.Authorization.Service/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net451" />
-  <package id="Simplic.CoreLib" version="6.1.118.621" targetFramework="net451" />
-  <package id="Simplic.Session" version="6.1.118.622" targetFramework="net451" />
-  <package id="Simplic.Sql" version="6.0.18.620" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
+  <package id="Simplic.CoreLib" version="6.17.20.322" targetFramework="net48" />
+  <package id="Simplic.Session" version="6.3.19.127" targetFramework="net48" />
+  <package id="Simplic.Sql" version="6.2.18.926" targetFramework="net48" />
 </packages>
