--- a/simplic-configuration/Simplic.Configuration.Data.DB/packages.config
+++ b/simplic-configuration/Simplic.Configuration.Data.DB/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.50.5" targetFramework="net451" />
-  <package id="Simplic.CoreLib" version="6.0.18.63" targetFramework="net451" />
-  <package id="Simplic.Sql" version="6.0.18.63" targetFramework="net451" />
+  <package id="Dapper" version="2.0.30" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
+  <package id="Simplic.CoreLib" version="6.17.20.322" targetFramework="net48" />
+  <package id="Simplic.Sql" version="6.2.18.926" targetFramework="net48" />
 </packages>
