--- a/simplic-configuration/Simplic.Configuration/Simplic.Configuration.csproj
+++ b/simplic-configuration/Simplic.Configuration/Simplic.Configuration.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Simplic.Configuration</RootNamespace>
     <AssemblyName>Simplic.Configuration</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Simplic.Cache, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.Cache.1.0.0.0\lib\net451\Simplic.Cache.dll</HintPath>
+    <Reference Include="Simplic.Cache, Version=6.1.20.217, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Cache.6.1.20.217\lib\net451\Simplic.Cache.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
