--- a/simplic-componentlicense/Simplic.ComponentLicense.Service/Simplic.ComponentLicense.Service.csproj
+++ b/simplic-componentlicense/Simplic.ComponentLicense.Service/Simplic.ComponentLicense.Service.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Simplic.ComponentLicense.Service</RootNamespace>
     <AssemblyName>Simplic.ComponentLicense.Service</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,9 +55,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="package.bat" />
     <None Include="packages.config" />
-    <None Include="Simplic.ComponentLicense.Service.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
