--- a/simplic-configurationanalyser/Simplic.ConfigurationAnalyzer.Service/packages.config
+++ b/simplic-configurationanalyser/Simplic.ConfigurationAnalyzer.Service/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.50.5" targetFramework="net451" />
+  <package id="Dapper" version="2.0.30" targetFramework="net48" />
   <package id="Simplic.CoreLib" version="6.0.18.63" targetFramework="net451" />
   <package id="Simplic.Sql" version="6.1.18.625" targetFramework="net451" />
-  <package id="Unity.Abstractions" version="3.3.0" targetFramework="net451" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net48" />
+  <package id="Unity.Abstractions" version="5.11.4" targetFramework="net48" />
 </packages>
